--- a/products details.html
+++ b/products details.html
@@ -38,47 +38,49 @@
 
     <div class="small-container single-product">
         <div class="row">
-            <div class="col-2">
-                <img src="images/gallery-1.jpg" width="100%">
+    <div class="col-2">
+        <img src="images/gallery-1.jpg" width="100%" id="ProductImg">
 
-                <div class="small-img-row">
-                    <div class="small-img-col">
-                        <img src="images/gallery-1.jpg" idth="100%">
-                    </div>
-                    <div class="small-img-col">
-                        <img src="images/gallery-2.jpg" idth="100%">
-                    </div>
-                    <div class="small-img-col">
-                        <img src="images/gallery-3.jpg" idth="100%">
-                    </div>
-                    <div class="small-img-col">
-                        <img src="images/gallery-4.jpg" idth="100%">
-                    </div>
-                </div>
-            </div>
-            <div class="col-2">
-                <p>Home / T-Shirt</p>
-                <h1>Red PrintedT-Shirt by HRX</h1>
-                <h4>5000 FCFA</h4>
-                <select>
-                    <option> Select Size</option>
-                    <option> XXL</option>
-                    <option> XL</option>
-                    <option> Large</option>
-                    <option> Medium</option>
-                    <option> Small</option>
-                </select>
-                <input type="number" value="1">
-                <a href="" class="btn">Add To Cart</a>
-                <h3>Product Details</h3>
-                <br>
-                <p>Give your summer wardrobe a style upgrade with HRX
-                    Men's Active T-Shirt. Team it with a pair of shorts for 
-                    your morning workout or a denims for an evening out with 
-                    the guys
-                </p>
-            </div>
-        </div> 
+        <div class="small-img-row">
+        <div class="small-img-col">
+        <img src="images/gallery-1.jpg" width="100%" class="small-img">
+        </div>
+        <div class="small-img-col">
+        <img src="images/gallery-2.jpg" width="100%" class="small-img">
+        </div>
+        <div class="small-img-col">
+        <img src="images/gallery-3.jpg" width="100%" class="small-img">
+        </div>
+        <div class="small-img-col">
+        <img src="images/gallery-4.jpg" width="100%" class="small-img">
+        </div>
+        </div>
+
+
+        </div>
+        <div class="col-2">
+            <p>Home / T-Shirt</p>
+            <h1>Red PrintedT-Shirt by HRX</h1>
+            <h4>5000 FCFA</h4>
+            <select>
+                <option> Select Size</option>
+                <option> XXL</option>
+                <option> XL</option>
+                <option> Large</option>
+                <option> Medium</option>
+                <option> Small</option>
+            </select>
+            <input type="number" value="1">
+            <a href="" class="btn">Add To Cart</a>
+            <h3>Product Details</h3>
+            <br>
+            <p>Give your summer wardrobe a style upgrade with HRX
+                Men's Active T-Shirt. Team it with a pair of shorts for 
+                your morning workout or a denims for an evening out with 
+                the guys
+            </p>
+        </div>
+    </div> 
     </div>
  
     <div class="small-container">
@@ -193,23 +195,28 @@
         }
     </script>
 
-    <script>
-        var productImg = document.getElementById("ProductImg");
-        var SmallImg = document.getElementByClassName("small-img");
 
-        SmallImg[0].onclick = function(){
-            ProductImg.src = SmallImg[0].src;
-        }
-        SmallImg[1].onclick = function(){
-            ProductImg.src = SmallImg[1].src;
-        }
-        SmallImg[2].onclick = function(){
-            ProductImg.src = SmallImg[2].src;
-        }
-        SmallImg[3].onclick = function(){
-            ProductImg.src = SmallImg[3].src;
-        }
-        
+    <script>
+        var ProductImg = document.getElementById("ProductImg");
+        var SmallImg = document.getElementsByClassName("small-img");
+
+            SmallImg[0].onclick = function()
+            {
+                ProductImg.src = SmallImg[0].src;
+            }
+            SmallImg[1].onclick = function()
+            {
+                ProductImg.src = SmallImg[1].src;
+            }
+            SmallImg[2].onclick = function()
+            {
+                ProductImg.src = SmallImg[2].src;
+            }
+            SmallImg[3].onclick = function()
+            {
+                ProductImg.src = SmallImg[3].src;
+            }
+            
     </script>
 </body>
 </html>
