--- a/products details.html
+++ b/products details.html
@@ -82,6 +82,13 @@
         </div>
     </div> 
     </div>
+
+    <div class="small-container">
+        <div class="row row-2">
+            <h2>Related Products</h2>
+            <p>View More</p>
+        </div>
+    </div>
  
     <div class="small-container">
 
